--- a/samples/VideoViews/VideoViews_iOS/Base.lproj/Main.storyboard
+++ b/samples/VideoViews/VideoViews_iOS/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-t3-LE0" customClass="AGEVideoContainer" customModule="VideoViews_iOS" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-t3-LE0" customClass="AGEVideoContainer" customModule="AGEVideoLayout">
                                 <rect key="frame" x="20" y="141" width="374" height="701"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
